# mohdel

./: .editorconfig  .gitignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION.md  LICENSE  LOGGING.md  PROTOCOL.md  README.md  SECURITY.md  jsconfig.json  package-lock.json  package.json
.github/workflows/: lint.yml  publish.yml
bench/: bench.js  isolation.js
config/: benchmarks.json  curated.example.json  curated.schema.json
docs/: CATALOG.md  COOKBOOK.md  GLOSSARY.md
js/client/: call.js  call_image.js  call_transcription.js  gate-binary.js  index.js  ndjson.js  transport.js
js/core/: envelope.js  errors.js  events.js  image.js  index.js  model-id.js  status.js  transcription.js
js/factory/: bridge.js
js/session/: _cooldown.js  _idle_heartbeat.js  _logger.js  _rate_limiter.js  _tracing.js  bin.js  driver.js  index.js  run.js  run_image.js  run_transcription.js
rust/napi-addon/: Cargo.toml
rust/napi-addon/src/: lib.rs
rust/thin-gate/: Cargo.toml
rust/thin-gate/examples/: embedder.rs
rust/thin-gate/src/: lib.rs  main.rs  metrics.rs  protocol.rs  secret.rs  server.rs  session_pool.rs  tracing.rs
rust/thin-gate/src/defaults/: cache.rs  config.rs  mod.rs  quota.rs  route.rs
rust/thin-gate/src/enforcer/: cooldown.rs  mod.rs  rate_limiter.rs
rust/thin-gate/src/hooks/: auth.rs  cache.rs  config.rs  mod.rs  quota.rs  route.rs
rust/thin-gate/tests/: admin_compose.rs  catalog_refresh.rs  config.rs  conformance.rs  policy.rs  protocol.rs  secret.rs  server.rs  session_dispatch.rs  socket_cleanup.rs  stress.rs  supervision.rs
scripts/: sync-version.js
src/: cli.js  common.js  complete.js  curated.js  demo.js  excluded.js  index.js  models.js  providers.js  select.js  sync.js  test-runner.js
src/cli/: ask.js  backup.js  bench.js  check.js  colored-logger.js  colors.js  default.js  doctor.js  index.js  json-output.js  model.js  onboard.js  rank.js  ratelimit.js  tag.js  transcribe.js
src/lib/: benchmark-score.js  benchmark-truth.js  cache.js  common.js  cooldown.js  creators.js  curated-cache.js  errors.js  index.js  logger.js  providers.js  rank.js  rate-limiter.js  schema.js  select.js  tracing.js  utils.js
src/sdk/: anthropic.js  gemini.js  groq.js  index.js  openai.js  utils.js
test/: anthropic.test.js  benchmark.md  dash-models.txt  demo.test.js  gemini.test.js  groq.test.js  index.test.js  openai.test.js
test/conformance/: envelopes.json  events.json  images.json  transcriptions.json
test/integration/: multiturn.test.js  provider.test.js  vision.test.js
test/live/: README.md  adapters.live.test.js  transcription.live.test.js
test/unit/: build-handlers.test.js  client-call-image.test.js  client-call-transcription.test.js  client-call.test.js  client-ndjson.test.js  cooldown.test.js  errors.test.js  (+38 more)
(+41 files in other folders)
